[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui/main_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/fonts/big_font.tres" type="DynamicFont" id=3]

[node name="main_menu" type="Spatial"]
pause_mode = 2
script = ExtResource( 1 )

[node name="control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="control"]
anchor_bottom = 1.0
margin_left = 46.0
margin_top = 115.0
margin_right = 257.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="control/buttons"]
margin_right = 621.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 3 )
text = "Kitty Kart"

[node name="story" type="Button" parent="control/buttons"]
margin_top = 133.0
margin_right = 621.0
margin_bottom = 178.0
text = "Story Mode"

[node name="shuffle" type="Button" parent="control/buttons"]
margin_top = 182.0
margin_right = 621.0
margin_bottom = 227.0
text = "Quick Race"

[node name="options" type="Button" parent="control/buttons"]
margin_top = 231.0
margin_right = 621.0
margin_bottom = 276.0
text = "Options"

[node name="quit" type="Button" parent="control/buttons"]
margin_top = 280.0
margin_right = 621.0
margin_bottom = 325.0
text = "Quit"

[node name="Camera" type="Camera" parent="."]

[connection signal="pressed" from="control/buttons/story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="control/buttons/shuffle" to="." method="_on_shuffle_pressed"]
[connection signal="pressed" from="control/buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="control/buttons/quit" to="." method="_on_quit_pressed"]
